Move AVPlayer config widgets to core/QtAV to allow to re-use these settings view in a new Video section from digiKam Setup dialog. the goal is to be able to configure the video decoder, the audio backend, and the video renderer with video preview framework, to prevent dysfunctions while playing audio and video media if wrong decoder/backend/renderer is selected by default.
Currently none of these settings is possible in digiKam and playing video and audio always depends of default settings done in QtAV
framework which can be badly configured for the available hardwares and modules in client computer.

TODO: add the new video config pannel in digiKam Setup dialog to configure decoder/backend/renderer.

CCBUGS: 435660
CCBUGS: 382582
CCBUGS: 445422
CCBUGS: 426951
CCBUGS: 430873
CCBUGS: 437328
CCBUGS: 388475
CCBUGS: 440668
CCBUGS: 415778
CCBUGS: 442802
CCBUGS: 423580

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -113,6 +113,18 @@ set(libqtav_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/common/WidgetRenderer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/utils/QtAVWidgets_Global.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/opengl/OpenGLWidgetRenderer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/VideoEQConfigPage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/Slider.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/ClickableMenu.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/PropertyEditor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/DecoderConfigPage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/AVFormatConfigPage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/AVPlayerConfigMngr.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/AVFilterConfigPage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/ShaderPage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/MiscPage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/ConfigPageBase.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/CaptureConfigPage.cpp
 )
 
 if(SSE4_1_FOUND)
