Add Setup Video page from digiKam configuration dialog. This allow to setup few options for media player as the decoder priority to use.
CCBUGS: 435660
CCBUGS: 382582
CCBUGS: 445422
CCBUGS: 426951
CCBUGS: 430873
CCBUGS: 437328
CCBUGS: 388475
CCBUGS: 440668
CCBUGS: 415778
CCBUGS: 442802
CCBUGS: 423580

--- a/core/utilities/setup/CMakeLists.txt
+++ b/core/utilities/setup/CMakeLists.txt
@@ -42,6 +42,7 @@ target_compile_definitions(core_setupcommon_obj
 set(libsetup_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/setup.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setuptooltip.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/setupvideo.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setuptemplate.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setupmisc.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setupplugins.cpp
