start ExifTool process in its own thread environment to prevent dead locks when it is part of the main thread

--- a/core/libs/metadataengine/CMakeLists.txt
+++ b/core/libs/metadataengine/CMakeLists.txt
@@ -72,6 +72,7 @@ set(libdmetadata_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/containers/template.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/containers/captionvalues.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/exiftool/exiftoolthread.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/exiftool/exiftoolparser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/exiftool/exiftoolparser_command.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/exiftool/exiftoolparser_output.cpp
