rename Slider class to AVPlayerSlider

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -114,10 +114,10 @@ set(libqtav_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/utils/QtAVWidgets_Global.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/opengl/OpenGLWidgetRenderer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/VideoEQConfigPage.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/Slider.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/ClickableMenu.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/PropertyEditor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/DecoderConfigPage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/AVPlayerSlider.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/AVFormatConfigPage.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/AVPlayerConfigMngr.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/widgets/config/AVFilterConfigPage.cpp
