this should fix compiling without media player support CCBUGS: 453992

--- a/core/utilities/setup/CMakeLists.txt
+++ b/core/utilities/setup/CMakeLists.txt
@@ -42,7 +42,6 @@ target_compile_definitions(core_setupcommon_obj
 set(libsetup_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/setup.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setuptooltip.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/setupvideo.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setuptemplate.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setupmisc.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setupplugins.cpp
@@ -81,6 +80,15 @@ set(libsetup_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/camera/cameralist.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/camera/cameratype.cpp
 )
+
+if(ENABLE_MEDIAPLAYER)
+
+    set(libsetup_SRCS
+        ${libsetup_SRCS}
+        ${CMAKE_CURRENT_SOURCE_DIR}/setupvideo.cpp
+    )
+
+endif()
 
 # Used by digikamgui
 add_library(gui_setup_obj OBJECT ${libsetup_SRCS})
