disable winrtio for the momet

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -391,13 +391,15 @@ if(ANDROID)
 
 endif()
 
-if(WIN32)
+# TODO more check for WinRT Qt modules availability is required here
 
-    set(libqtav_SRCS ${libqtav_SRCS}
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/io/WinRTIO.cpp
-    )
-
-endif()
+#if(WIN32)
+#
+#    set(libqtav_SRCS ${libqtav_SRCS}
+#        ${CMAKE_CURRENT_SOURCE_DIR}/src/io/WinRTIO.cpp
+#    )
+#
+#endif()
 
 if(AVRESAMPLE_FOUND)
 
