--- a/core/dplugins/generic/tools/htmlgallery/CMakeLists.txt
+++ b/core/dplugins/generic/tools/htmlgallery/CMakeLists.txt
@@ -19,6 +19,10 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_I
 
                     ${LIBXSLT_INCLUDE_DIR}
                     ${LIBXML2_INCLUDE_DIR}
+
+                    ${CMAKE_CURRENT_SOURCE_DIR}/generator
+                    ${CMAKE_CURRENT_SOURCE_DIR}/parameters
+                    ${CMAKE_CURRENT_SOURCE_DIR}/wizard
 )
 
 add_definitions(${LIBXSLT_DEFINITIONS}
