--- a/core/showfoto/CMakeLists.txt
+++ b/core/showfoto/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(BEFORE
                     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Network,INTERFACE_INCLUDE_DIRECTORIES>
 
                     ${CMAKE_CURRENT_SOURCE_DIR}/folderview
+                    ${CMAKE_CURRENT_SOURCE_DIR}/stackview
                     ${CMAKE_CURRENT_SOURCE_DIR}/thumbbar
                     ${CMAKE_CURRENT_SOURCE_DIR}/setup
                     ${CMAKE_CURRENT_SOURCE_DIR}/main
