--- a/core/avplayer/CMakeLists.txt
+++ b/core/avplayer/CMakeLists.txt
@@ -24,6 +24,11 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core,INTERFACE_INCL
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::Service,INTERFACE_INCLUDE_DIRECTORIES>
+
+                    ${CMAKE_CURRENT_SOURCE_DIR}/filters
+                    ${CMAKE_CURRENT_SOURCE_DIR}/playlist
+                    ${CMAKE_CURRENT_SOURCE_DIR}/utils
+                    ${CMAKE_CURRENT_SOURCE_DIR}/main
 )
 
 if(HAVE_OPENGL)
