--- a/core/dplugins/generic/tools/calendar/CMakeLists.txt
+++ b/core/dplugins/generic/tools/calendar/CMakeLists.txt
@@ -15,6 +15,9 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_I
 
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
+
+                    ${CMAKE_CURRENT_SOURCE_DIR}/print
+                    ${CMAKE_CURRENT_SOURCE_DIR}/wizard
 )
 
 if(KF5CalendarCore_FOUND)
