--- a/core/dplugins/generic/tools/expoblending/CMakeLists.txt
+++ b/core/dplugins/generic/tools/expoblending/CMakeLists.txt
@@ -15,6 +15,10 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_I
 
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
+
+                    ${CMAKE_CURRENT_SOURCE_DIR}/blendingdlg
+                    ${CMAKE_CURRENT_SOURCE_DIR}/manager
+                    ${CMAKE_CURRENT_SOURCE_DIR}/wizard
 )
 
 set(expoblendingplugin_SRCS
