--- a/core/dplugins/generic/tools/sendbymail/CMakeLists.txt
+++ b/core/dplugins/generic/tools/sendbymail/CMakeLists.txt
@@ -16,6 +16,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
+
+                    ${CMAKE_CURRENT_SOURCE_DIR}/manager
+                    ${CMAKE_CURRENT_SOURCE_DIR}/tools
+                    ${CMAKE_CURRENT_SOURCE_DIR}/wizard
 )
 
 set(sendbymailplugin_SRCS
