--- a/core/dplugins/generic/webservices/mediawiki/CMakeLists.txt
+++ b/core/dplugins/generic/webservices/mediawiki/CMakeLists.txt
@@ -17,6 +17,8 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_I
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::CoreAddons,INTERFACE_INCLUDE_DIRECTORIES>
+
+                    ${CMAKE_CURRENT_SOURCE_DIR}/backend
 )
 
 # --------------------------------------------------------------------------------
