--- a/core/dplugins/generic/webservices/unified/CMakeLists.txt
+++ b/core/dplugins/generic/webservices/unified/CMakeLists.txt
@@ -16,6 +16,9 @@ include_directories($<TARGET_PROPERTY:Qt5::Widgets,INTERFACE_INCLUDE_DIRECTORIES
 
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
+
+                    ${CMAKE_CURRENT_SOURCE_DIR}/manager
+                    ${CMAKE_CURRENT_SOURCE_DIR}/wizard
 )
 
 set(unifiedplugin_SRCS
