--- a/core/tests/geolocation/kmlexport/CMakeLists.txt
+++ b/core/tests/geolocation/kmlexport/CMakeLists.txt
@@ -1,10 +1,12 @@
 #
-# Copyright (c) 2010-2021, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2022, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
 APPLY_COMMON_POLICIES()
+
+include_directories(${CMAKE_SOURCE_DIR}/core/dplugins/generic/metadata/geolocationedit/kmlexport)
 
 ecm_add_tests(${CMAKE_CURRENT_SOURCE_DIR}/geoparsing_utest.cpp
 
