Another optimization to limit size of include paths while compiling. Now only core/libs/*.h is passed for all parts. core/utilities/*.h is only passed whe necessary. core/app/*.h is never passed and paths are limited to the necessary. Typically, on older version of Windows (including serve pack), the include path size is limited. If too much paths unused are pass to compilation lines, this will break the workflow. This problem never exists under Linux, Freebsd, and MacOS.

--- a/core/libs/CMakeLists.txt
+++ b/core/libs/CMakeLists.txt
@@ -8,6 +8,22 @@
 
 include(RulesDNGSdk)
 
+HEADER_DIRECTORIES(${CMAKE_SOURCE_DIR}/core/utilities DK_LOCAL_INCLUDES_UTILS)
+
+include_directories(
+
+    ${DK_LOCAL_INCLUDES_UTILS}
+
+    ${CMAKE_SOURCE_DIR}/core/app/main
+    ${CMAKE_SOURCE_DIR}/core/app/date
+    ${CMAKE_SOURCE_DIR}/core/app/dragdrop
+    ${CMAKE_SOURCE_DIR}/core/app/views/stack
+    ${CMAKE_SOURCE_DIR}/core/app/views/utils
+    ${CMAKE_SOURCE_DIR}/core/app/items/utils
+    ${CMAKE_SOURCE_DIR}/core/app/items/delegate
+    ${CMAKE_SOURCE_DIR}/core/app/views/sidebar
+)
+
 add_subdirectory(dimg)
 add_subdirectory(dragdrop)
 add_subdirectory(metadataengine)
