--- a/core/dplugins/CMakeLists.txt
+++ b/core/dplugins/CMakeLists.txt
@@ -4,6 +4,10 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
+HEADER_DIRECTORIES(${CMAKE_SOURCE_DIR}/core/utilities DK_LOCAL_INCLUDES_UTILS)
+
+include_directories(${DK_LOCAL_INCLUDES_UTILS})
+
 add_subdirectory(generic)
 add_subdirectory(editor)
 add_subdirectory(bqm)
