--- a/core/libs/models/CMakeLists.txt
+++ b/core/libs/models/CMakeLists.txt
@@ -16,6 +16,8 @@ include_directories(
     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:KF5::XmlGui,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:KF5::Solid,INTERFACE_INCLUDE_DIRECTORIES>
+
+    ${CMAKE_SOURCE_DIR}/core/app/main
 )
 
 if(ENABLE_DBUS)
