--- a/core/dplugins/generic/webservices/CMakeLists.txt
+++ b/core/dplugins/generic/webservices/CMakeLists.txt
@@ -4,6 +4,8 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
+include_directories(${CMAKE_SOURCE_DIR}/core/libs/dplugins/webservices/o2/src)
+
 if(ENABLE_QWEBENGINE)
 
     include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::WebEngineWidgets,INTERFACE_INCLUDE_DIRECTORIES>)
