--- a/core/libs/pgfutils/CMakeLists.txt
+++ b/core/libs/pgfutils/CMakeLists.txt
@@ -16,6 +16,8 @@ DISABLE_CLANG_COMPILER_WARNINGS("4.99.99" "-Wno-reorder-ctor")
 include_directories(
     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Gui,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core,INTERFACE_INCLUDE_DIRECTORIES>
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/libpgf
 )
 
 set(libpgfutils_SRCS
