We need to switch digiKam target as Release to detect OpenCV as RelWithDebInfo in not supported by OpenCV cmake shared config. event if rules are present and shared with client application: https://github.com/opencv/opencv/blob/4.x/cmake/templates/OpenCVConfig.cmake.in#L151 BUGS: 454941

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# See bug #454941 and the OpenCV detection in RelWithDebInfo target
+
 if(MSVC)
     set(CMAKE_BUILD_TYPE
         "Release"
