--- a/core/app/CMakeLists.txt
+++ b/core/app/CMakeLists.txt
@@ -19,6 +19,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/utils/digikam_dbconfig.h.cmake.in
 # -----------------------------------------------------------------------------------
 # Define common includes rules for digiKam targets
 
+HEADER_DIRECTORIES(${CMAKE_SOURCE_DIR}/core/utilities DK_LOCAL_INCLUDES_UTILS)
+
 set(DIGIKAM_TARGET_INCLUDES $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::PrintSupport,INTERFACE_INCLUDE_DIRECTORIES>
                             $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Gui,INTERFACE_INCLUDE_DIRECTORIES>
                             $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Xml,INTERFACE_INCLUDE_DIRECTORIES>
@@ -48,42 +50,7 @@ set(DIGIKAM_TARGET_INCLUDES $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::PrintSuppor
                             ${CMAKE_SOURCE_DIR}/core/app/items/overlays
                             ${CMAKE_SOURCE_DIR}/core/app/views/preview
 
-                            ${CMAKE_SOURCE_DIR}/core/utilities/advancedrename
-                            ${CMAKE_SOURCE_DIR}/core/utilities/firstrun
-                            ${CMAKE_SOURCE_DIR}/core/utilities/setup
-                            ${CMAKE_SOURCE_DIR}/core/utilities/setup/camera
-                            ${CMAKE_SOURCE_DIR}/core/utilities/setup/editor
-                            ${CMAKE_SOURCE_DIR}/core/utilities/setup/system
-                            ${CMAKE_SOURCE_DIR}/core/utilities/setup/downloader
-                            ${CMAKE_SOURCE_DIR}/core/utilities/searchwindow
-                            ${CMAKE_SOURCE_DIR}/core/utilities/maintenance
-                            ${CMAKE_SOURCE_DIR}/core/utilities/extrasupport/filesindexer
-                            ${CMAKE_SOURCE_DIR}/core/utilities/extrasupport/addressbook
-                            ${CMAKE_SOURCE_DIR}/core/utilities/import/main
-                            ${CMAKE_SOURCE_DIR}/core/utilities/import/models
-                            ${CMAKE_SOURCE_DIR}/core/utilities/import/views
-                            ${CMAKE_SOURCE_DIR}/core/utilities/import/backend
-                            ${CMAKE_SOURCE_DIR}/core/utilities/imageeditor/editor
-                            ${CMAKE_SOURCE_DIR}/core/utilities/imageeditor/main
-                            ${CMAKE_SOURCE_DIR}/core/utilities/imageeditor/core
-                            ${CMAKE_SOURCE_DIR}/core/utilities/imageeditor/widgets
-                            ${CMAKE_SOURCE_DIR}/core/utilities/facemanagement/threads
-                            ${CMAKE_SOURCE_DIR}/core/utilities/facemanagement/database
-                            ${CMAKE_SOURCE_DIR}/core/utilities/facemanagement/widgets
-                            ${CMAKE_SOURCE_DIR}/core/utilities/facemanagement/items
-                            ${CMAKE_SOURCE_DIR}/core/utilities/lighttable
-                            ${CMAKE_SOURCE_DIR}/core/utilities/fuzzysearch
-                            ${CMAKE_SOURCE_DIR}/core/utilities/focuspointmanagement
-                            ${CMAKE_SOURCE_DIR}/core/utilities/queuemanager/main
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/mapsearches
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geoiface/core
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geoiface/tiles
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geoiface/tracks
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geoiface/correlator
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geoiface/reversegeocoding
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geoiface/items
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geoiface/widgets
-                            ${CMAKE_SOURCE_DIR}/core/utilities/geolocation/geomapwrapper
+                            ${DK_LOCAL_INCLUDES_UTILS}
 )
 
 if(ENABLE_QWEBENGINE)
