try to fix broken linking under MSVC from build factory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # See bug #454941 and the OpenCV detection in RelWithDebInfo target
 
-if(MSVC)
+if(MSVC AND CMAKE_BUILD_TYPE EQUAL "RelWithDebInfo")
     set(CMAKE_BUILD_TYPE
         "Release"
         CACHE STRING "Build type: Debug, Release, RelWithDebInfo or MinSizeRel"
